# napr

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: ci.yml  python-app.yml  test.yml
napr/: __init__.py  _base.py
napr/applications/coconut/: __init__.py  _base.py
napr/applications/coconut/terpenes/: __init__.py  _base.py
napr/apps/: __init__.py
napr/apps/coconut/: __init__.py
napr/apps/coconut/terpene/: __init__.py  _base.py  _plot.py  explore.py  preprocess.py  preprocessing.py
napr/apps/coconut/terpene/tests/: conftest.py  test_base_terpene.py  test_explore.py  test_preprocessing.py
napr/data/: __init__.py  _base.py  _load.py
napr/data/tests/: test_base_data.py  test_load.py
napr/evaluation/: __init__.py  classification.py
napr/evaluation/tests/: test_classification.py
napr/hyperopt/: __init__.py  _base.py
napr/hyperopt/tests/: test_base_hyperopt.py
napr/plot/: ggplot_bw.mplstyle
napr/plotting/: __init__.py  _base.py  ggplot_classic.mplstyle
napr/plotting/tests/: test_base_plotting.py
napr/utils/: __init__.py  _stat.py  decorators.py  helpers.py  random.py
napr/utils/tests/: test_decorators.py  test_helpers.py  test_random.py  test_stat.py
tutorials/: Terpene-.ipynb  Terpene-classification-classic.ipynb  Terpene-classification.ipynb  Terpene-explore.ipynb
