[tool.poetry]
name = "napr"
version = "0.1.3"
description = "Machine learning meets natural products"
authors = ["Morteza Hosseini"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
numpy = "^1.22.2"
matplotlib = "^3.5.1"
tqdm = "^4.63.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
