[tool.poetry]
name = "napr"
version = "0.1.3"
description = "Machine learning meets natural products"
authors = ["Morteza Hosseini"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.1"
tqdm = "^4.63.0"
requests = "^2.27.1"
scipy = { version = "^1.8.0", python = ">=3.9,<3.11" }
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
