[tool.poetry]
name = "napr"
version = "0.1.5"
description = "Machine learning meets natural products"
authors = ["Morteza Hosseini"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.5.1"
tqdm = "^4.64.0"
requests = "^2.27.1"
scipy = { version = "^1.8.0", python = ">=3.8,<3.11" }
seaborn = "^0.11.2"
scikit-learn = "^1.1.1"
xgboost = "^1.6.1"
tensorflow = { version = "^2.9.1", python = ">=3.9,<3.11" }
keras-tuner = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.3.3"
ipykernel = "^6.13.0"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
